--- a/frontend/src/app/posts/post-create/post-create.component.html
+++ b/frontend/src/app/posts/post-create/post-create.component.html
@@ -1,3 +1,11 @@
-<textarea rows="6"></textarea>
+<mat-form-field>
+    <textarea rows="6" [(ngModel)]="enteredValue"></textarea>
+</mat-form-field>
 <hr>
 <button (click)="onAddPost()">Save Post</button>
+<p>{{ newPost }}</p>
+
+<!-- <textarea rows="6" [value]="newPost" #postInput></textarea>
+<hr>
+<button (click)="onAddPost(postInput)">Save Post</button>
+<p>{{ newPost }}</p> -->
