applying angular material to textarea and button

--- a/frontend/src/app/posts/post-create/post-create.component.html
+++ b/frontend/src/app/posts/post-create/post-create.component.html
@@ -1,8 +1,8 @@
 <mat-form-field>
     <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
+    <button mat-raised-button color="primary" (click)="onAddPost()">Save Post</button>
 </mat-form-field>
 <hr>
-<button (click)="onAddPost()">Save Post</button>
 <p>{{ newPost }}</p>
 
 <!-- <textarea rows="6" [value]="newPost" #postInput></textarea>
