--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-post-create></app-post-create>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<main>
+    <app-post-create></app-post-create>
+    <app-post-list></app-post-list>
+</main>
+<!-- <router-outlet></router-outlet> -->
