--- a/frontend/src/app/posts/post-list/post-list.component.html
+++ b/frontend/src/app/posts/post-list/post-list.component.html
@@ -4,7 +4,11 @@
         {{ post.title }}
       </mat-expansion-panel-header>
       <p>{{ post.content }}</p>
+
+     <button mat-raised-button color="yellow">Edit</button>
+     <button mat-raised-button color="warn">Delete</button>
     </mat-expansion-panel>
+    
   </mat-accordion>
   <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
   
