--- a/frontend/src/app/posts/post-create/post-create.component.html
+++ b/frontend/src/app/posts/post-create/post-create.component.html
@@ -1,3 +1,4 @@
+<section>
 <mat-card>
     <form (submit)="onAddPost(postForm)" #postForm="ngForm">
       <mat-form-field>
@@ -29,7 +30,7 @@
         type="submit">Save Post</button>
     </form>
   </mat-card>
-  
+</section>
 
 
 <!-- <mat-form-field>
