dili maka delete

--- a/frontend/src/app/posts/post-list/post-list.component.scss
+++ b/frontend/src/app/posts/post-list/post-list.component.scss
@@ -6,3 +6,13 @@
 .info-text {
   text-align: center;
 }
+
+section {
+  width: 80%;
+  margin: auto;
+  margin-top: 2rem;
+}
+// mat-form-field,
+// textarea {
+//   width: 100%;
+// }
